--- a/app/paracheck/pubspec.yaml
+++ b/app/paracheck/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/questionnaire.json
+    - assets/questions_meteo_int.json
     - assets/Paracheck_logo.png
     - assets/questions_postvol.json
 
