--- a/app/paracheck/pubspec.yaml
+++ b/app/paracheck/pubspec.yaml
@@ -28,8 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
+  flutter_localizations:
     sdk: flutter
+  intl: 0.20.2
   flutter_radar_chart: ^0.2.1
     
 
@@ -63,10 +64,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/questions_meteo_int.json
+    - assets/personal_weather_questions.json
     - assets/Paracheck_logo.png
-    - assets/questions_postvol.json
-    - assets/questions_mavie.json
+    - assets/postflight_questions.json
+    - assets/mfwia_questions.json
 
   fonts:
     - family: Poppins
