--- a/app/paracheck/pubspec.yaml
+++ b/app/paracheck/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_radar_chart: ^0.2.1
+
+  pdf: ^3.10.7
+  printing: ^5.12.0
     
 
   # The following adds the Cupertino Icons font to your application.
