--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,4 +1,4 @@
-name: Flutter CI (Android + Web + Pages)
+name: Flutter CI (Android + Web + Pages + Integration)
 
 on:
   push:
@@ -6,17 +6,18 @@ on:
   pull_request:
   workflow_dispatch:
 
-# Permissions et config requises par GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
   test:
+    name: Unit & Widget tests (Linux)
     runs-on: ubuntu-latest
     defaults: { run: { working-directory: app/paracheck } }
     steps:
@@ -32,10 +33,46 @@ jobs:
           key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-pub-
       - run: flutter pub get
-      - run: flutter test
+      - name: Analyze
+        run: flutter analyze
+      - name: Test (with coverage)
+        run: flutter test --coverage --reporter expanded
+      - name: Upload coverage (lcov.info)
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-lcov
+          path: app/paracheck/coverage/lcov.info
+          if-no-files-found: warn
+
+  integration_linux:
+    name: Integration tests (Linux desktop headless)
+    needs: test
+    runs-on: ubuntu-latest
+    defaults: { run: { working-directory: app/paracheck } }
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '17' }
+      - uses: subosito/flutter-action@v2
+        with: { channel: stable }
+      # Dépendances build Linux desktop
+      - name: Install Linux desktop deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
+      - name: Enable Linux desktop
+        run: flutter config --enable-linux-desktop
+      - name: Pub get
+        run: flutter pub get
+      # Lancer les tests d'intégration via Xvfb pour gérer les animations/sheets
+      - name: Run integration tests (xvfb)
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: flutter test integration_test -d linux -r expanded
 
   android:
-    needs: test
+    name: Build Android APK
+    needs: integration_linux
     runs-on: ubuntu-latest
     defaults: { run: { working-directory: app/paracheck } }
     steps:
@@ -75,7 +112,8 @@ jobs:
           if-no-files-found: warn
 
   web:
-    needs: test
+    name: Build Web
+    needs: integration_linux
     runs-on: ubuntu-latest
     defaults: { run: { working-directory: app/paracheck } }
     steps:
@@ -89,7 +127,6 @@ jobs:
           key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-pub-
       - run: flutter config --enable-web
-      # IMPORTANT: base-href pour GitHub Pages projet (/REPO_NAME/)
       - name: Build Web (with base-href)
         run: flutter build web --release --base-href "/${{ github.event.repository.name }}/"
       - name: Upload Web artifact
