--- a/app/paracheck/pubspec.yaml
+++ b/app/paracheck/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_radar_chart: ^0.2.1
+  file_picker: ^8.1.2
+  file_saver: ^0.2.13
+  path_provider: ^2.1.4
     
 
   # The following adds the Cupertino Icons font to your application.
