--- a/app/paracheck/pubspec.yaml
+++ b/app/paracheck/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   file_picker: ^8.1.2
   file_saver: ^0.2.13
   path_provider: ^2.1.4
+  web: ^1.1.0
+
     
 
   # The following adds the Cupertino Icons font to your application.
