--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -23,9 +23,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
-        with: { distribution: temurin, java-version: '17' }
+        with:
+          distribution: temurin
+          java-version: '17'
       - uses: subosito/flutter-action@v2
-        with: { channel: stable }
+        with:
+          channel: stable
       - name: Cache Pub
         uses: actions/cache@v4
         with:
@@ -35,14 +38,8 @@ jobs:
       - run: flutter pub get
       - name: Analyze
         run: flutter analyze
-      - name: Test (with coverage)
-        run: flutter test --coverage --reporter expanded
-      - name: Upload coverage (lcov.info)
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-lcov
-          path: app/paracheck/coverage/lcov.info
-          if-no-files-found: warn
+      - name: Test
+        run: flutter test --reporter expanded
 
   integration_linux:
     name: Integration tests (Linux desktop headless)
@@ -52,9 +49,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
-        with: { distribution: temurin, java-version: '17' }
+        with:
+          distribution: temurin
+          java-version: '17'
       - uses: subosito/flutter-action@v2
-        with: { channel: stable }
+        with:
+          channel: stable
       - name: Install Linux desktop deps
         run: |
           sudo apt-get update
@@ -76,9 +76,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
-        with: { distribution: temurin, java-version: '17' }
+        with:
+          distribution: temurin
+          java-version: '17'
       - uses: subosito/flutter-action@v2
-        with: { channel: stable }
+        with:
+          channel: stable
       - name: Configure Android SDK & licenses
         run: |
           echo "sdk.dir=${ANDROID_SDK_ROOT}" > android/local.properties
@@ -117,7 +120,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
-        with: { channel: stable }
+        with:
+          channel: stable
       - name: Cache Pub
         uses: actions/cache@v4
         with:
