--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -41,11 +41,10 @@ jobs:
       - name: Test
         run: flutter test --reporter expanded
 
-  integration_linux:
+    integration_linux:
     name: Integration tests (Linux desktop headless)
     needs: test
     runs-on: ubuntu-latest
-    defaults: { run: { working-directory: app/paracheck } }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -61,12 +60,14 @@ jobs:
           sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
       - name: Enable Linux desktop
         run: flutter config --enable-linux-desktop
-      - name: Pub get
-        run: flutter pub get
       - name: Run integration tests (xvfb)
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: flutter test integration_test -d linux -r expanded
+          run: |
+            cd app/paracheck
+            flutter pub get
+            flutter test integration_test -d linux -r expanded
+
 
   android:
     name: Build Android APK
