--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,7 +2,8 @@ name: Flutter CI (Android + Web + Pages + Integration)
 
 on:
   push:
-    branches: [ main ]
+    branches: - '***'
+    tags: - '***'
   pull_request:
   workflow_dispatch:
 
@@ -42,32 +43,28 @@ jobs:
         run: flutter test --reporter expanded
 
     integration_linux:
-    name: Integration tests (Linux desktop headless)
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-      - name: Install Linux desktop deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
-      - name: Enable Linux desktop
-        run: flutter config --enable-linux-desktop
-      - name: Run integration tests (xvfb)
-        uses: GabrielBB/xvfb-action@v1
-        with:
+      name: Integration tests (Linux desktop headless)
+      needs: test
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-java@v4
+          with: { distribution: temurin, java-version: '17' }
+        - uses: subosito/flutter-action@v2
+          with: { channel: stable }
+        - name: Install Linux desktop deps
           run: |
-            cd app/paracheck
-            flutter pub get
-            flutter test integration_test -d linux -r expanded
-
+            sudo apt-get update
+            sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
+        - name: Enable Linux desktop
+          run: flutter config --enable-linux-desktop
+        - name: Run integration tests (xvfb)
+          uses: GabrielBB/xvfb-action@v1
+          with:
+            run: |
+              cd app/paracheck
+              flutter pub get
+              flutter test integration_test -d linux -r expanded
 
   android:
     name: Build Android APK
