fix(CI): error line 5

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -2,8 +2,7 @@ name: Flutter CI (Android + Web + Pages + Integration)
 
 on:
   push:
-    branches: - '***'
-    tags: - '***'
+    branches: '***'
   pull_request:
   workflow_dispatch:
 
