--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,9 +1,12 @@
 name: Flutter CI (Android + Web + Pages + Integration)
+run-name: "CI • ${{ github.ref_name }} • ${{ github.sha }}"
 
 on:
   push:
-    branches: '***'
+    branches: ['**']   
+    tags: ['*']        
   pull_request:
+    branches: ['**']   
   workflow_dispatch:
 
 permissions:
@@ -41,29 +44,32 @@ jobs:
       - name: Test
         run: flutter test --reporter expanded
 
-    integration_linux:
-      name: Integration tests (Linux desktop headless)
-      needs: test
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-java@v4
-          with: { distribution: temurin, java-version: '17' }
-        - uses: subosito/flutter-action@v2
-          with: { channel: stable }
-        - name: Install Linux desktop deps
+  integration_linux:
+    name: Integration tests (Linux desktop headless)
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - name: Install Linux desktop deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
+      - name: Enable Linux desktop
+        run: flutter config --enable-linux-desktop
+      - name: Run integration tests (xvfb)
+        uses: GabrielBB/xvfb-action@v1
+        with:
           run: |
-            sudo apt-get update
-            sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
-        - name: Enable Linux desktop
-          run: flutter config --enable-linux-desktop
-        - name: Run integration tests (xvfb)
-          uses: GabrielBB/xvfb-action@v1
-          with:
-            run: |
-              cd app/paracheck
-              flutter pub get
-              flutter test integration_test -d linux -r expanded
+            cd app/paracheck
+            flutter pub get
+            flutter test integration_test -d linux -r expanded
 
   android:
     name: Build Android APK
