--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -3,8 +3,8 @@ run-name: "CI • ${{ github.ref_name }} • ${{ github.sha }}"
 
 on:
   push:
-    branches: ['**']   # toutes les branches
-    tags: ['*']        # tous les tags
+    branches: ['**']     # toutes les branches
+    tags:    ['*']       # tous les tags
   pull_request:
     branches: ['**']
   workflow_dispatch:
@@ -50,6 +50,9 @@ jobs:
     name: Integration tests (Linux desktop headless)
     needs: test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: app/paracheck
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -62,13 +65,13 @@ jobs:
       - name: Install Linux desktop deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build libgtk-3-dev clang cmake pkg-config
+          sudo apt-get install -y xvfb ninja-build libgtk-3-dev clang cmake pkg-config
       - name: Enable Linux desktop
         run: flutter config --enable-linux-desktop
-      - name: Run integration tests (xvfb)
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: bash -lc 'cd app/paracheck && flutter pub get && flutter test integration_test -d linux -r expanded'
+      - name: Pub get
+        run: flutter pub get
+      - name: Run integration tests (xvfb-run)
+        run: xvfb-run --auto-servernum flutter test integration_test -d linux -r expanded
 
   android:
     name: Build Android APK
