--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,10 +1,10 @@
-name: Flutter CI (Android + Web + Pages + Integration)
+name: Flutter CI (Android + Web + Pages)
 run-name: "CI • ${{ github.ref_name }} • ${{ github.sha }}"
 
 on:
   push:
-    branches: ['**']     # toutes les branches
-    tags:    ['*']       # tous les tags
+    branches: ['**']
+    tags: ['*']
   pull_request:
     branches: ['**']
   workflow_dispatch:
@@ -46,36 +46,9 @@ jobs:
       - name: Test
         run: flutter test --reporter expanded
 
-  integration_linux:
-    name: Integration tests (Linux desktop headless)
-    needs: test
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: app/paracheck
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-      - name: Install Linux desktop deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb ninja-build libgtk-3-dev clang cmake pkg-config
-      - name: Enable Linux desktop
-        run: flutter config --enable-linux-desktop
-      - name: Pub get
-        run: flutter pub get
-      - name: Run integration tests (xvfb-run)
-        run: xvfb-run --auto-servernum flutter test integration_test -d linux -r expanded
-
   android:
     name: Build Android APK
-    needs: integration_linux
+    needs: test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -121,7 +94,7 @@ jobs:
 
   web:
     name: Build Web
-    needs: integration_linux
+    needs: test
     runs-on: ubuntu-latest
     defaults:
       run:
